fixed connection page layout problems

--- a/static/style.css
+++ b/static/style.css
@@ -72,10 +72,6 @@ body {
     overflow-y: auto;
 }
 
-.output-panels-container > *:last-child {
-    margin-bottom: 1rem;
-  }
-
 .output-panel {
     background: #f8f9fa;
     border: 1px solid #dee2e6;
@@ -434,6 +430,7 @@ ul {
 }
 
 li {
+    padding: .5rem;
     font-size: 13px;
     transition: background-color 0.2s, color 0.2s;
     white-space: nowrap;
@@ -447,13 +444,9 @@ ul.nested-list li:hover {
 }
 
 #server-list li.selected {
-    background-color: #007acc;
+    background-color: #e6f0ff;
     color: #fff;
     font-weight: bold;
-}
-
-#server-list li {
-  margin-bottom: .4rem;
 }
 
 #command-list {
@@ -469,24 +462,24 @@ ul.nested-list li:hover {
 
 /* Tooltip box */
 #command-list li .tooltip-text {
-  display: none;
+    display: none;
     max-width: 20rem;
-  background-color: #007acc;
-  color: white;
-  font-size: 12px;
-  font-weight: 500;
-  padding: 6px 10px;
-  border-radius: 6px;
-  position: absolute;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-  white-space: normal;
-  line-height: 1.3;
-  z-index: 10;
-  transition: opacity 0.2s ease;
-  opacity: 0;
+    background-color: #007acc;
+    color: white;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 6px 10px;
+    border-radius: 6px;
+    position: absolute;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    white-space: normal;
+    line-height: 1.3;
+    z-index: 10;
+    transition: opacity 0.2s ease;
+    opacity: 0;
 }
 
 #command-list li .tooltip-text::after {
